--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Music player PBSS</title>
-  <script src="../dist/id3-minimized.js" type="text/javascript"></script>
+  <script src="./dist/id3-minimized.js" type="text/javascript"></script>
 </head>
 
 <body>
