fix: aplica midia screen

--- a/index.html
+++ b/index.html
@@ -50,24 +50,18 @@
     </div>
 
     <div class="container-lista">
+      <table>
+        <thead>
+          <tr>
+            <th>N*</th>
+            <th>Nome</th>
+            <th>Duração</th>
+          </tr>
+        </thead>
+      </table>
       <div class="ctr-scroll">
         <table>
-          <thead>
-            <tr>
-              <th>N*</th>
-              <th>Nome</th>
-              <!-- <th>Artista</th> -->
-              <!-- <th>Album</th> -->
-              <th>Duração</th>
-            </tr>
-          </thead>
           <tbody>
-            <!-- <tr>
-            <td>Nome</td>
-            <td>Artista</td>
-            <td>Album</td>
-            <td>Duração</td>
-          </tr> -->
           </tbody>
         </table>
       </div>
