--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 
 <head>
-  <link rel="manifest" href="./manifest.json">
-  <link rel="apple-touch-icon" href="./assets/icons/icon-192x192.png">
   <meta name="theme-color" content="#000000">
+  <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="canonical" href="https://pwa-music.vercel.app/">
   <meta name="description" content="Music player PBSS">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Music player PBSS</title>
   <script src="./dist/id3-minimized.js" type="text/javascript"></script>
+  <!-- <script src="./app.js"></script> -->
 </head>
 
 <body>
-
   <div class="container-player">
     <div class="player">
       <div class="visualizador-audio">
