feat: adiciona botao closed app

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </head>
 
 <body>
+  <div class="container-closed">
+    <h1>X</h1>
+  </div>
+  <script>
+    document.querySelector('.container-closed').addEventListener('click', () => {
+      window.close();
+    });
+  </script>
   <div class="container-player">
     <div class="player">
       <div class="visualizador-audio">
