fix: styles pwa

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#d7a709">
   <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
   <link rel="manifest" href="./manifest.json">
   <link rel="canonical" href="https://pwa-music.vercel.app/">
-  <meta name="description" content="Music player PBSS">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
